# fox

./: .gitignore  20260713_品牌AI长期项目协作系统_场景化需求澄清与产品反馈_v0.1(1).md  AGENTS.md  AI品牌营销长期项目协作系统_完整问题与技术需求说明_20260713.md  CLAUDE.md  PRODUCT.md  pyproject.toml  requirements-phase0-audio.txt  requirements-phase0.txt
config/: brand-os.example.json
contracts/phase0/: openwork-adapter.json  port-catalog.json
contracts/phase1/: agent-runtime-run.json  canonical-store.json  evidence-query.json  local-ai-access.json  meeting-ingest.json  proposal-lifecycle.json  source-import.json  task-packet-assembly.json
contracts/phase2/: audit-outbox-inbox.json  http-api.json  object-evidence.json  observability.json  oidc-identity.json  postgresql-authority.json  project-authorization.json  server-boundary.json  server-recovery.json  write-consistency.json
contracts/phase3/: data-cutover.json
docs/: README.md
docs/adr/: 0001-team-server-authority.md  0002-openwork-primary-client.md  0003-local-first-hongri-validation.md  0004-openwork-single-client.md  0005-single-client-server-authority.md  0006-foxwork-name-and-chinese-ui.md  0007-adopt-openwork-den-control-plane.md  0008-den-self-registration-and-remote-workspaces.md
docs/analysis/: bisheng-integration-evaluation.md  deployment-topology-evaluation.md  hongri-local-mvp-boundary.md  module-inventory.md  open-source-evaluation.md  openwork-client-evaluation.md  project-overview.md  risk-assessment.md  two-track-requirements.md
docs/phase0/: known-source-gaps.md  (+7 more)
scripts/: reconcile_meeting_ingest.py  reconcile_source_manifest.py
(+173 files in other folders)
