[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "brand-project-os"
version = "0.1.0"
description = "本地优先的品牌项目状态与证据协作核心"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.26,<2",
]

[project.scripts]
brand-os = "brand_os.cli:main"

[dependency-groups]
dev = [
  "pdfplumber>=0.11,<1",
  "pypdf>=5,<7",
  "pytest>=9.0.3,<10",
  "python-docx>=1.1,<2",
  "python-pptx>=1.0,<2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
